objects/pse__Forecast_Setup_Category__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSetupCategoryHelp</customHelpPage>
    <description>Stores details about the weighted billing forecast categories, such as Best Case or Expected, used in a billing forecast calculation. There must be at least one category assigned to the billing forecast setup details for a billing forecast calculation to run.</description>
    <fields>
        <fullName>pse__Billings_Actuals__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the actual billable amount on a project. This includes Billed Timecards, Billed Milestones and Miscellaneous Adjustments.</description>
        <inlineHelpText>The multiplier applied to the actual billable amount on a project. This includes Billed Timecards, Billed Milestones and Miscellaneous Adjustments.</inlineHelpText>
        <label>Billings</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Actuals__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the expenses on a project. This is the billable amount of the expenses.</description>
        <inlineHelpText>The multiplier applied to the expenses on a project. This is the billable amount of the expenses.</inlineHelpText>
        <label>Expenses</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Setup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The billing forecast setup this billing forecast category is used with. You must configure at least one billing forecast category.</description>
        <inlineHelpText>The forecast setup this forecast category is used with. You must configure at least one forecast category.</inlineHelpText>
        <label>Billing Forecast Setup</label>
        <referenceTo>pse__Forecast_Setup__c</referenceTo>
        <relationshipLabel>Billing Forecast Setup Categories</relationshipLabel>
        <relationshipName>Forecast_Setup_Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Label__c</fullName>
        <description>The label displayed for a weighted billing forecast category, for example, Expected, Best Case, Worst Case.</description>
        <inlineHelpText>The label displayed for a weighted forecast category, for example, Expected, Best Case, Worst Case.</inlineHelpText>
        <label>Label</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opportunities__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to opportunities for this weighted billing forecast category.</description>
        <inlineHelpText>The multiplier applied to opportunities for this weighted forecast category.</inlineHelpText>
        <label>Opportunities</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <description>The order the billing forecast categories are applied in the billing forecast calculation. You can enter values from 1 to 3.</description>
        <inlineHelpText>The order the forecast categories are applied in the forecast calculation. You can enter values from 1 to 3.</inlineHelpText>
        <label>Category Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Ordinal__c</fullName>
        <description>This field is deprecated.</description>
        <inlineHelpText>This field has been deprecated and been replaced by Order__c</inlineHelpText>
        <label>zDeprecated:Category Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Assignments__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the value of the assignments on a project.</description>
        <inlineHelpText>The multiplier applied to the value of the assignments on a project.</inlineHelpText>
        <label>Scheduled Assignments</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Held_Resource_Requests__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the resource request hours on a project, when the Resource Held field is checked.</description>
        <inlineHelpText>The multiplier applied to the resource request hours on a project, when the Resource Held field is checked.</inlineHelpText>
        <label>Held Resource Requests</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestones__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the value of the scheduled milestones for a project.</description>
        <inlineHelpText>The multiplier applied to the value of the scheduled milestones for a project.</inlineHelpText>
        <label>Scheduled Milestones</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Unheld_Resource_Requests__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the planned resource request hours for a project, when the Resource Held field is unchecked.</description>
        <inlineHelpText>The multiplier applied to the planned resource request hours for a project, when the Resource Held field is unchecked.</inlineHelpText>
        <label>Unheld Resource Requests</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The multiplier applied to the value of the unscheduled backlog on a project, using the value generated by the backlog calculation.</description>
        <inlineHelpText>The multiplier applied to the value of the unscheduled backlog on a project, using the value generated by the backlog calculation.</inlineHelpText>
        <label>Unscheduled Backlog</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Billing Forecast Setup Category</label>
    <nameField>
        <displayFormat>FSetupCategory-{0000}</displayFormat>
        <label>Billing Forecast Setup Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Setup Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>